<resources>
    <string name="app_name">Good Hair</string>
    <string name="login_Title">Welcome to Good Hair</string>
    <string name="stylist_name">Name</string>
    <string name="stylist_email">Email</string>
    <string name="stylist_shopName">Shop Name</string>
    <string name="set_profile_picture">set profile picture</string>
    <string name="title_activity_feed">Feed</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="caption">Caption</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="want_to_explore_all_the_stylist_out_there">Want to explore all the stylist out there?</string>
    <string name="want_to_show_off_your_skill_as_a_stylist">Want to show off your skill as a stylist?</string>
    <string name="sign_up_here">Sign up here!</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">NEXT</string>
    <string name="back">Back</string>
    <string name="user_registration">User Registration</string>
    <string name="sign_me_up">Sign me up</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_stylist_account">Create Stylist Account</string>
    <string name="shop_name">Shop Name:</string>
    <string name="username">Username:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="shop_address">Shop Address:</string>
    <string name="what_do_you_do">What do you do?:</string>
    <string name="chk_boxbraids">#Box Braids</string>
    <string name="chk_havanatwists">#Havana Twists</string>
    <string name="chk_frontaladhesive">#Frontal with Adhesive</string>
    <string name="chk_sewin">#Sew In</string>
    <string name="chk_goddesslocs">#Goddess Locs</string>
    <string name="chk_silkpress">#Silk Press</string>
    <string name="chk_other">#Other</string>
</resources>
