<?xml version="1.0" encoding="utf-8"?>




<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    tools:context=".Sty">

    <ScrollView
        android:id="@+id/stylistReg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- things to scroll -->

        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/userReg_shopName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/shop_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/userReg_shopAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userReg_password" />

    <EditText
        android:id="@+id/userReg_username"
        android:layout_width="302dp"
        android:layout_height="39dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/userReg_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userReg_email" />

    <EditText
        android:id="@+id/userReg_lname"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/userReg_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userReg_fname" />

    <TextView
        android:id="@+id/HairStylistTitle"
        android:layout_width="299dp"
        android:layout_height="58dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginBottom="10dp"
        android:text="@string/create_stylist_account"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/userReg_fname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userReg_fname"
        android:layout_width="304dp"
        android:layout_height="41dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/userReg_lname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HairStylistTitle" />

    <EditText
        android:id="@+id/userReg_email"
        android:layout_width="304dp"
        android:layout_height="41dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/userReg_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userReg_lname" />

    <EditText
        android:id="@+id/userReg_password"
        android:layout_width="302dp"
        android:layout_height="39dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/userReg_shopName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userReg_username" />

    <EditText
        android:id="@+id/userReg_shopAddress"
        android:layout_width="302dp"
        android:layout_height="41dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/shop_address"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toTopOf="@+id/userReg_bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userReg_shopName" />


    <TextView
        android:id="@+id/textCategories"
        android:layout_width="304dp"
        android:layout_height="31dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="What do you do?"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userReg_phonenum" />


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="353dp"
        android:layout_height="74dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_createAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCategories">

        <LinearLayout
            android:id="@+id/chkboxLinearLayout"
            android:layout_width="248dp"
            android:layout_height="50dp"
            android:layout_marginStart="54dp"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="105dp"
            android:layout_marginRight="105dp"
            android:layout_marginBottom="19dp"
            android:isScrollContainer="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/btn_createAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCategories">

            <CheckBox
                android:id="@+id/chkboxbraids"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_boxbraids"
                tools:layout_editor_absoluteX="51dp"
                tools:layout_editor_absoluteY="539dp" />

            <CheckBox
                android:id="@+id/chkfrontaladhesive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_frontaladhesive"
                tools:layout_editor_absoluteX="52dp"
                tools:layout_editor_absoluteY="443dp" />

            <CheckBox
                android:id="@+id/chkhavanatwsists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/chk_havanatwists"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="571dp" />

            <CheckBox
                android:id="@+id/chksewin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_sewin"
                tools:layout_editor_absoluteX="52dp"
                tools:layout_editor_absoluteY="475dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_silkpress"
                tools:layout_editor_absoluteX="52dp"
                tools:layout_editor_absoluteY="507dp" />

            <CheckBox
                android:id="@+id/chkother"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_other"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="603dp" />

        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/userReg_bio"
        android:layout_width="301dp"
        android:layout_height="40dp"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:ems="10"
        android:hint="Type a short bio..."
        android:inputType="textLongMessage|textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/userReg_phonenum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userReg_shopAddress" />

    <EditText
        android:id="@+id/userReg_phonenum"
        android:layout_width="300dp"
        android:layout_height="39dp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:ems="10"
        android:hint="Phone Number:"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textCategories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userReg_bio" />

    <Button
        android:id="@+id/btn_Back"
        android:layout_width="65dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_createAccount"
        android:layout_width="299dp"
        android:layout_height="57dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="100dp"
        android:text="CREATE ACCOUNT"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />


</androidx.constraintlayout.widget.ConstraintLayout>
